Completed all the basics.

--- a/static/webpages/about.html
+++ b/static/webpages/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms and Conditions</title>
+    <title>About us</title>
 
     <link rel="stylesheet" href="../stylesheets/page-elements/pg-elements.navbar/navbar-stylesheet.css">
     <link rel="stylesheet" href="../stylesheets/page-elements/pg-elements.footer/footer.css">
@@ -154,12 +154,12 @@
                     <nav class="footer__nav">
                         <ul class="footer__nav-list">
                             <div class="footer__nav-item" style="margin-right: 10rem;">
-                                <a href="#" class="footer__nav-link">
+                                <a href="terms-and-conditions.html" class="footer__nav-link">
                                     <i class="fa-solid fa-hand-point-right"></i>&nbsp;&nbsp;&nbsp;Terms & Conditions
                                 </a>
                             </div>
                             <div class="footer__nav-item" style="margin-right: 10rem;">
-                                <a href="#" class="footer__nav-link">
+                                <a href="privacy-policy.html" class="footer__nav-link">
                                     <i class="fa-solid fa-hand-point-right"></i>&nbsp;&nbsp;&nbsp;Privacy
                                 </a>
                             </div>
