--- a/static/webpages/privacy-policy.html
+++ b/static/webpages/privacy-policy.html
@@ -150,7 +150,7 @@
                     <nav class="footer__nav">
                         <ul class="footer__nav-list">
                             <div class="footer__nav-item" style="margin-right: 10rem;">
-                                <a href="#" class="footer__nav-link">
+                                <a href="terms-and-conditions.html" class="footer__nav-link">
                                     <i class="fa-solid fa-hand-point-right"></i>&nbsp;&nbsp;&nbsp;Terms & Conditions
                                 </a>
                             </div>
