--- a/static/webpages/roles/green-coder.html
+++ b/static/webpages/roles/green-coder.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Green Coder role</title>
 
     <link rel="stylesheet" href="../../stylesheets/roboto-css-classes.css">
     <link rel="stylesheet" href="../../stylesheets/page-elements/pg-elements.footer/footer.css">
@@ -31,7 +31,7 @@
             <li><a href="../../../home-page.html">Home</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="../about.html">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="../contact.html">Contact</a></li>
         </ul>
         <div class="navbar-toggle" onclick="toggleNavbar()">
             <span></span>
@@ -41,7 +41,8 @@
     </nav>
 
     <div class="main-container">
-        
+        <h1>Green Coder role</h1>
+        <p>The Green Coder role is the basic role for everyone present in our discord server. When a user joins the server, they will get this role by default. However, if you do not get the role, and it's been a few days since you joined the server, then it's an issue with out discord server's bot. Be patient and wait for a few days, and if the issue still persists, feel free to DM the moderators regarding the issue. Just don't spam to us, and we will help you out and give you the role.</p>
     </div>    
 
     <footer class="footer">
