--- a/static/webpages/roles/other-roles.html
+++ b/static/webpages/roles/other-roles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memelord role</title>
+    <title>Other roles</title>
 
     <link rel="stylesheet" href="../../stylesheets/roboto-css-classes.css">
     <link rel="stylesheet" href="../../stylesheets/page-elements/pg-elements.footer/footer.css">
@@ -18,7 +18,6 @@
     <style>
         .footer {
             margin-top: 300px;
-            height: 300px;
         }
         .navbar {
             opacity: 0.9;
@@ -39,13 +38,12 @@
             <span></span>
             <span></span>
         </div>
-    </nav><br><br><br><br><br><br><br><br>
+    </nav>
 
     <div class="main-container">
-        <h1>Meme Lord role</h1>
-        <hr>
-        <p>The Meme Lord role is given to those who post memes in either <a href="https://discord.com/channels/942188181032431698/1299786772724846704" class="discord-link" target="_blank"># 😆｜💻｜tech-memes</a> or <a href="https://discord.com/channels/942188181032431698/1303027369098874972" target="_blank" class="discord-link"># 😆｜🌱｜general-memes</a> regularly. And also, the memes should be entertaining and funny. This role is not too hard to get. You can get memes from anywhere, or just make your own memes and post them in the channels. Being a regular meme poster doesn't harm your dignity, instead it enhances it. Having this role can be a symbol of pride for you in the server. If you recieved the role, but don't want it further with you, just contact any moderator in the server and they will remove it from your account. If you have any further question regarding to this role, then feel free to DM me or any other moderator in the server. Just don't spam any message to us, and we will help you out.</p>
-    </div>
+        <h1>Other roles</h1>
+        <p>Other roles include roles like AI, Python, C/C++, Javascript, Web Design and Game Creation. These are all the roles you can choose when you join the server. These roles are not exclusive to the server and yes, you can choose all of them even if you don't know them. These roles are made to let others know what you're good at and maybe DM you asking a question on a topic. If you joined the server long ago and want to get these roles then check <a href="https://discord.com/channels/942188181032431698/customize-community" class="discord-link" target="_blank"><i class="fa-solid fa-list"></i> Channels & roles</a>. If you have any questions or doubts regarding these roles, then feel free to DM the moderators. Just don't spam to us and we will help you out.</p>
+    </div>    
 
     <footer class="footer">
         <div class="footer__parralax">
@@ -107,8 +105,8 @@
                                     <i class="fa-solid fa-hand-point-right"></i>&nbsp;&nbsp;&nbsp;Terms & Conditions
                                 </a>
                             </div>
-                            <div class="footer__nav-item" style="margin-right: 10rem;">
-                                <a href="../privacy-policy.html" class="footer__nav-link" target="_blank">
+                            <div class="footer__nav-item" style="margin-right: 10rem;" target="_blank">
+                                <a href="../privacy-policy.html" class="footer__nav-link">
                                     <i class="fa-solid fa-hand-point-right"></i>&nbsp;&nbsp;&nbsp;Privacy
                                 </a>
                             </div>
