--- a/static/webpages/roles/patreon-donor.html
+++ b/static/webpages/roles/patreon-donor.html
@@ -28,10 +28,10 @@
     <nav class="navbar">
         <div class="navbar-logo">🧬</div>
         <ul class="navbar-links" id="navbarLinks">
-            <li><a href="#home">Home</a></li>
+            <li><a href="../../../home-page.html">Home</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../contact.html">Contact</a></li>
         </ul>
         <div class="navbar-toggle" onclick="toggleNavbar()">
             <span></span>
