--- a/static/webpages/roles/to-focus.html
+++ b/static/webpages/roles/to-focus.html
@@ -28,10 +28,10 @@
     <nav class="navbar">
         <div class="navbar-logo">🧬</div>
         <ul class="navbar-links" id="navbarLinks">
-            <li><a href="#home">Home</a></li>
+            <li><a href="../../../home-page.html">Home</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../contact.html">Contact</a></li>
         </ul>
         <div class="navbar-toggle" onclick="toggleNavbar()">
             <span></span>
@@ -43,7 +43,7 @@
     <div class="main-container">
         <h1>2 Focus role</h1>
         <hr>
-        <p>The 2 Focus role is optional to get. If you want to receive updates, give suggestions, report bugs or get news from the 2 Focus app, then this role is for you. The 2 Focus app is available on both PlayStore (Android) and App Store(iOS). The app is completely free and is built to help you focus on what you're doing. It has a simple and intuitive interface, and it's easy to use. The app has a lot of features, including a timer, pomodoro timer, and a task manager. Besides that, if you have any questions regarding the role, then feel free to DM the moderators. Just don't spam and we will help you out.</p>
+        <p>The 2 Focus role is optional to get. If you want to receive updates, give suggestions, report bugs or get news from the 2 Focus app, then this role is for you. The 2 Focus app is available on both PlayStore (Android) and App Store(iOS). The app is completely free and is built to help you focus on what you're doing. It has a simple and intuitive interface, and it's easy to use. The app has a lot of features, including a timer, pomodoro timer, and a task manager. If you joined the server long ago and want to get these roles then check <a href="https://discord.com/channels/942188181032431698/customize-community" class="discord-link" target="_blank"><i class="fa-solid fa-list"></i> Channels & roles</a>. Besides that, if you have any questions regarding the role, then feel free to DM the moderators. Just don't spam and we will help you out.</p>
     </div>    
 
     <footer class="footer">
