--- a/static/webpages/roles/question-of-the-day.html
+++ b/static/webpages/roles/question-of-the-day.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memelord role</title>
+    <title>Question of the day role</title>
 
     <link rel="stylesheet" href="../../stylesheets/roboto-css-classes.css">
     <link rel="stylesheet" href="../../stylesheets/page-elements/pg-elements.footer/footer.css">
@@ -18,7 +18,6 @@
     <style>
         .footer {
             margin-top: 300px;
-            height: 300px;
         }
         .navbar {
             opacity: 0.9;
@@ -39,13 +38,12 @@
             <span></span>
             <span></span>
         </div>
-    </nav><br><br><br><br><br><br><br><br>
+    </nav>
 
     <div class="main-container">
-        <h1>Meme Lord role</h1>
-        <hr>
-        <p>The Meme Lord role is given to those who post memes in either <a href="https://discord.com/channels/942188181032431698/1299786772724846704" class="discord-link" target="_blank"># 😆｜💻｜tech-memes</a> or <a href="https://discord.com/channels/942188181032431698/1303027369098874972" target="_blank" class="discord-link"># 😆｜🌱｜general-memes</a> regularly. And also, the memes should be entertaining and funny. This role is not too hard to get. You can get memes from anywhere, or just make your own memes and post them in the channels. Being a regular meme poster doesn't harm your dignity, instead it enhances it. Having this role can be a symbol of pride for you in the server. If you recieved the role, but don't want it further with you, just contact any moderator in the server and they will remove it from your account. If you have any further question regarding to this role, then feel free to DM me or any other moderator in the server. Just don't spam any message to us, and we will help you out.</p>
-    </div>
+        <h1>Question of the day role</h1>
+        <p>The Question of the Day role is an optional role for you in the server. If you want to get pinged for receiving questions in <a href="https://discord.com/channels/942188181032431698/1305143672605638696" target="_blank" rel="noopener noreferrer" class="discord-link"># 🧩｜qotd</a>, then this role is for you. You will have to answer the Question of the Day in <a href="https://discord.com/channels/942188181032431698/1308731732903596083" target="_blank" rel="noopener noreferrer" class="discord-link"># 💬｜qotd-answer</a>. But sometimes, questions can also be asked in polls and in this case, you'll not need the <a href="https://discord.com/channels/942188181032431698/1308731732903596083" target="_blank" rel="noopener noreferrer" class="discord-link"># 💬｜qotd-answer</a>. Feel free to have this role, the questions are just about you're opinion. The questions can never be offensive or inappropriate. If you joined the server long ago and want to get these roles then check <a href="https://discord.com/channels/942188181032431698/customize-community" class="discord-link" target="_blank"><i class="fa-solid fa-list"></i> Channels & roles</a>. If you have any further doubts or questions regarding this role, then feel free to DM the moderators. Just don't spam to us, and we'll help you out!</p>
+    </div>    
 
     <footer class="footer">
         <div class="footer__parralax">
@@ -107,8 +105,8 @@
                                     <i class="fa-solid fa-hand-point-right"></i>&nbsp;&nbsp;&nbsp;Terms & Conditions
                                 </a>
                             </div>
-                            <div class="footer__nav-item" style="margin-right: 10rem;">
-                                <a href="../privacy-policy.html" class="footer__nav-link" target="_blank">
+                            <div class="footer__nav-item" style="margin-right: 10rem;" target="_blank">
+                                <a href="../privacy-policy.html" class="footer__nav-link">
                                     <i class="fa-solid fa-hand-point-right"></i>&nbsp;&nbsp;&nbsp;Privacy
                                 </a>
                             </div>
