--- a/static/webpages/terms-and-conditions.html
+++ b/static/webpages/terms-and-conditions.html
@@ -167,7 +167,7 @@
                                 </a>
                             </div>
                             <div class="footer__nav-item" style="margin-right: 10rem;">
-                                <a href="#" class="footer__nav-link">
+                                <a href="privacy-policy.html" class="footer__nav-link">
                                     <i class="fa-solid fa-hand-point-right"></i>&nbsp;&nbsp;&nbsp;Privacy
                                 </a>
                             </div>
