Uploaded favicon to all HTML documents

--- a/home-page.html
+++ b/home-page.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="icon" type="image/x-icon" href="static/stylesheets/page-elements/images/home-page.html/dna_1f9ec.png">
+
     <link rel="stylesheet" href="static/stylesheets/root_stylesheet.css">
     <link rel="stylesheet" href="static/stylesheets/roboto-css-classes.css">
     <link rel="stylesheet" href="static/stylesheets/page-elements/pg-elements.navbar/navbar-stylesheet.css">
