--- a/static/webpages/about.html
+++ b/static/webpages/about.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
 
+    <link rel="icon" type="image/x-icon" href="../stylesheets/page-elements/images/home-page.html/dna_1f9ec.png">
+
     <link rel="stylesheet" href="../stylesheets/page-elements/pg-elements.navbar/navbar-stylesheet.css">
     <link rel="stylesheet" href="../stylesheets/page-elements/pg-elements.footer/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
