--- a/static/webpages/roles/other-roles.html
+++ b/static/webpages/roles/other-roles.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Other roles</title>
 
+    <link rel="icon" type="image/x-icon" href="../../stylesheets/page-elements/images/home-page.html/dna_1f9ec.png">
+
     <link rel="stylesheet" href="../../stylesheets/roboto-css-classes.css">
     <link rel="stylesheet" href="../../stylesheets/page-elements/pg-elements.footer/footer.css">
     <link rel="stylesheet" href="../../stylesheets/page-elements/pg-elements.navbar/navbar-stylesheet.css">
