--- a/static/webpages/roles/professional.html
+++ b/static/webpages/roles/professional.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document under development</title>
+
+    <link rel="icon" type="image/x-icon" href="../../stylesheets/page-elements/images/home-page.html/dna_1f9ec.png">
 
     <link rel="stylesheet" href="../../stylesheets/roboto-css-classes.css">
     <link rel="stylesheet" href="../../stylesheets/page-elements/pg-elements.footer/footer.css">
