--- a/home-page.html
+++ b/home-page.html
@@ -216,7 +216,7 @@
         </div>
     </footer>
 
-    <script src="static/scripts/homepage.config/homepage.config.js"></script>
+    <script src="static/scripts/homepage.scripts/homepage-script.js"></script>
     <script src="static/scripts/navbar/navbar.js"></script>
 </body>
 </html>
