--- a/static/webpages/roles/memelord.html
+++ b/static/webpages/roles/memelord.html
@@ -41,7 +41,7 @@
             <span></span>
             <span></span>
         </div>
-    </nav><br><br><br><br><br><br><br><br>
+    </nav>
 
     <div class="main-container">
         <h1>Meme Lord role</h1>
